 * Add support for C11 atomic_compare_exchange_... primitives.
7.42
 * Fix license, add README, publish as an OPAM package
 * gen: avoid pseudo-instruction li in generated tests.
 * tools: option -alloc <bool> for mprog [allocate symbolic registers].
 * herd: the match constructs also applies to relation.
 * Correct libdir definition for gen: same as herd, as it may parse bell
   files and  would thus include stdlib.cat
7.41
 * More opam
7.40
 * Opam build
7.39
 * herd: enable matching over event sets.
 * tools: add msethashes, for changing *test* hashes.
7.38
 * gen: list all global variables in init when type is non-default
 * new mselect: specify intervals for number of ins and number of threads.
 * Data dependencies are through registers only.
7.37
 * Add array access as a location, meaningfull only for litmus at present
7.36
 * herd: support for linux spin_lock and spin_unlock.
7.35
 * herd: Correct LISA rmw "exchange" -> same semantics as X86 xch
7.34
 * suppress some 32 bits constants -> 31 bits
 * gen : follow -realdep true option for AArch64 and ARM
7.33
 * herd: reformulate C load and store to use expressions as locations.
   Brittle (cf. jingle)
7.32
 * Specific internal dependencies for C exchange and LISA Rmw...
 * X86, correct data ports for the exchange instruction.
7.31
 * Backward compatibility
7.30
 * herd: bug LISA, parsing, add one-letter instruction as possible annotations.
7.29
 * herd: bug stdlib.cat (old fromto).
7.28
 * herd: correcy fromto ? At least compatible with article.
7.27
 * linux: lock -> rcu_read_lock; unlock -> rcu_read_unlock
7.26
 * AArch64, add logical and instruction.
 * Generators, implement -obs three,four,infinity
7.25
 * litmus bug, strh instruction were parsed as strb (copy-paste bug)
 * Linux atomic operations, xchg only.
7.24
 * Add AArch64 instruction STP/STNP (litmus only)
 * Correct msum7 -hexa ---> Conditions are also in hexa.
 * Add AArch64 instruction LDNP (litmus only).
7.23