@@ -1,0 +1,13 @@
+SC
+(* Sc with explict (and redundant) coherence check *)
+include "fences.cat"
+include "cos.cat"
+
+(* Coherence *)
+acyclic po-loc | fr | rf | co as coherence
+
+(* Atomic *)
+empty rmw & (fre;coe) as atom
+
+(* Sequential consistency *)
+acyclic po | fr | rf | co as sc
