@@ -1,3 +1,4 @@
+ * Add -cycles names option, to display cycles of failing checks.
  * Add support for C11 atomic_compare_exchange_... primitives.
 7.42
  * Fix license, add README, publish as an OPAM package
